tests/paczka1/fuzzy1/23793235.err
Error in line 1: fYtH3TEUxJ S988 32,0
Error in line 6: QLj A6 35,8
Error in line 7: QLj S889 16,9
Error in line 17: A6 S353 22,9
Error in line 8: WAHHr7m3 S988 99,8
Error in line 25: A6 S988 21,3
Error in line 28: A6 S988 87,8
Error in line 27: fYtH3TEUxJ S889 25,9
Error in line 31: A6 S353 65,7
Error in line 22: WAHHr7m3 S353 7,4
Error in line 33: A6 S353 270,7
Error in line 29: QLj A6 33,4
